--- a/form/style.css
+++ b/form/style.css
@@ -20,21 +20,47 @@ body{
 
 }
 h1{
-    margin-top: 0;
+    margin-top: 10px;
     padding-bottom: 0px;
     text-align: center;
+    font-weight: 400;
 
 }
 .container{
-background-color: #AA4A30;
-margin: auto;
+background-color: #7C3C21;
 padding: 20px;
+border-radius: 2px;
+position: relative;
+width:20%;
 }
 
 .btn{
     border-style: none;
-    background-color: tomato;
-    padding:5px 68px;
-    border-radius: 5px;
+    background-color: #d3391e;
+    padding:10px ;
+    border-radius: 3px;
     margin-top: 20px;
+    color: #EDCFA9;
+    width:100%;
+}
+
+.form-control{
+    display:flex ;
+    flex-direction: column;
+    margin: 30px auto;
+}
+
+
+input{
+    margin-top: 10px;
+    border-style: none;
+    padding:5px;
+    /* background-color:#7C3C21 ;
+    border-bottom:solid #EDCFA9 ; */
+    
+}
+
+a{
+    color:#d3391e;
+    text-decoration: none;
 }
