added animation to span

--- a/form/style.css
+++ b/form/style.css
@@ -1,15 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;700&display=swap');
 
 *{
     box-sizing: border-box;
 }
 
 body{
-    background-color: #D57149;
+    background-color: #c98368;
     color:#EDCFA9;
     font-size: 0.75rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Be Vietnam Pro', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,12 +54,63 @@ input{
     margin-top: 10px;
     border-style: none;
     padding:5px;
-    /* background-color:#7C3C21 ;
-    border-bottom:solid #EDCFA9 ; */
+    outline: none;
+    border-bottom:solid #EDCFA9 ; 
+    background-color: #7C3C21;
+    color:white;
     
+}
+
+.update{
+    border-bottom:solid #d3391e ;
 }
 
 a{
     color:#d3391e;
     text-decoration: none;
+}
+
+
+
+/* span{
+    animation: bounce;
+    position: relative;
+    animation-duration: 2s;
+}
+
+@keyframes bounce {
+     0%{bottom: 20px}
+     25%{bottom: 0px}
+     50%{top: 20px}
+     75%{top: 20px}
+     100%{top: 0px}
+     
+} */
+
+/* label{
+    position: relative;
+    transition: transform 2s;   
+}
+
+label:hover{
+    transform: translateY(20px);
+} */
+
+span{
+    position:relative;
+    transition: animation 2s;
+}
+
+span:hover{
+    animation-name:bounce;
+    animation-duration: 2s;
+}
+
+@keyframes bounce {
+    0%{bottom: 20px}
+    25%{bottom: 0px}
+    50%{top: 20px}
+    75%{top: 20px}
+    100%{top: 0px}
+    
 }
