--- a/form/style.css
+++ b/form/style.css
@@ -41,6 +41,11 @@ width:20%;
     margin-top: 20px;
     color: #EDCFA9;
     width:100%;
+    cursor: pointer;
+}
+
+.btn:hover{
+    background-color: rgb(233, 136, 136);
 }
 
 .form-control{
@@ -70,32 +75,6 @@ a{
     text-decoration: none;
 }
 
-
-
-/* span{
-    animation: bounce;
-    position: relative;
-    animation-duration: 2s;
-}
-
-@keyframes bounce {
-     0%{bottom: 20px}
-     25%{bottom: 0px}
-     50%{top: 20px}
-     75%{top: 20px}
-     100%{top: 0px}
-     
-} */
-
-/* label{
-    position: relative;
-    transition: transform 2s;   
-}
-
-label:hover{
-    transform: translateY(20px);
-} */
-
 span{
     position:relative;
     transition: animation 2s;
@@ -114,3 +93,4 @@ span:hover{
     100%{top: 0px}
     
 }
+
